# crabular

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  clippy.toml
.github/workflows/: ci.yml  release.yml
crabular-cli/: Cargo.toml  README.md
crabular-cli/src/: main.rs
crabular-wasm/: Cargo.toml  README.md
crabular-wasm/examples/: README.md  index.html  node-demo.js
crabular-wasm/src/: lib.rs
examples/: data.csv  data.json  data.jsonl  data.tsv  invoice.csv  table.rs
src/: alignment.rs  builder.rs  cell.rs  constraint.rs  lib.rs  padding.rs  row.rs  style.rs  table.rs  vertical_alignment.rs
