[package]
name = "crabular"
version = "0.2.0"
edition = "2024"
rust-version = "1.93"
authors = ["kakilangit <crates@kakilangit.dev>"]
description = "A high-performance ASCII table library for Rust"
documentation = "https://docs.rs/crabular"
repository = "https://github.com/kakilangit/crabular"
license = "MIT"
keywords = ["ascii", "table", "cli", "terminal", "formatting"]
categories = ["command-line-interface", "text-processing", "visualization"]
readme = "README.md"

[dependencies]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
panic = "deny"
unwrap_used = "deny"
expect_used = "deny"
pedantic = { level = "deny", priority = 1 }

[[example]]
name = "table"
path = "examples/table.rs"
