[workspace]
members = ["crabular-cli"]
resolver = "2"

[workspace.package]
version = "0.5.1"
edition = "2024"
rust-version = "1.93"
authors = ["kakilangit <crates@kakilangit.dev>"]
license = "MIT"
repository = "https://github.com/kakilangit/crabular"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
panic = "deny"
unwrap_used = "deny"
expect_used = "deny"
pedantic = { level = "deny", priority = 1 }

[package]
name = "crabular"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "A high-performance ASCII table library for Rust"
documentation = "https://docs.rs/crabular"
license.workspace = true
repository.workspace = true
keywords = ["ascii", "table", "terminal", "formatting", "visualization"]
categories = ["visualization", "text-processing"]
readme = "README.md"

[dependencies]

[lints]
workspace = true

[[example]]
name = "table"
path = "examples/table.rs"
