[package]
name = "crabular-cli"
version = "0.4.0"
edition = "2024"
rust-version = "1.93"
authors = ["kakilangit <crates@kakilangit.dev>"]
description = "A CLI tool for generating ASCII tables"
repository = "https://github.com/kakilangit/crabular"
license = "MIT"
keywords = ["ascii", "table", "cli", "terminal", "formatting"]
categories = ["command-line-interface", "text-processing", "visualization"]
readme = "README.md"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
crabular = { path = "..", version = "0.4.0" }
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
