[package]
name = "crabular-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "A CLI tool for generating ASCII tables"
license.workspace = true
repository.workspace = true
keywords = ["ascii", "table", "cli", "csv", "json"]
categories = ["command-line-interface", "text-processing", "visualization"]
readme = "README.md"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
crabular = { path = "..", version = "0.7" }
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
